plugins {
    id 'fabric-loom' version '1.0-SNAPSHOT'
    id 'maven-publish'
    id 'io.github.juuxel.loom-quiltflower' version '1.8.+'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

loom {
    accessWidenerPath = file("src/main/resources/aylyth.accesswidener")
	
	runs {
		datagen {
			server()
 
			name "Minecraft Data"
			vmArg "-Dfabric-api.datagen"
			vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
 
			runDir "build/datagen"
		}
	}
}

sourceSets.main.resources.srcDirs += ['src/main/generated']

repositories {
    maven {
        name "cardinal components"
        url "https://ladysnake.jfrog.io/artifactory/mods"
    }
    maven {
        name "reach entity attributes"
        url "https://maven.jamieswhiteshirt.com/libs-release"
    }
    maven {
        name "terraform"
        url "https://maven.terraformersmc.com"
    }
    maven {
        name "geckolib"
        url "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven"
    }
    maven {
        name "rei"
        url "https://maven.shedaniel.me"
    }
	maven {
			url "https://cursemaven.com"
	}
    maven {
        name = "patchouli"
        url = "https://maven.blamejared.com"
    }
    maven {
        name = "jitpack"
        url = "https://jitpack.io"
    }
    maven {
        name "modrinth"
        url "https://api.modrinth.com/maven"
    }
    maven {
        name "impersonate"
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${loader_version}"

    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${cardinal_components_version}"
    include "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${cardinal_components_version}"
    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${cardinal_components_version}"
    include "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${cardinal_components_version}"
    modImplementation "com.jamieswhiteshirt:reach-entity-attributes:${reach_entity_attributes_version}"
    include "com.jamieswhiteshirt:reach-entity-attributes:${reach_entity_attributes_version}"
    modImplementation "com.terraformersmc.terraform-api:terraform-wood-api-v1:${terraform_wood_api_version}"
    include "com.terraformersmc.terraform-api:terraform-wood-api-v1:${terraform_wood_api_version}"

    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
    modImplementation "software.bernie.geckolib:geckolib-fabric-${geckolib_version}"

    //EMI
    modImplementation "dev.emi:emi:${emi_version}"

    //REI
    modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${rei_version}"
    // modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${rei_version}"

    //
	modRuntimeOnly "curse.maven:disablecustomworldsadvice-401978:3827588"

    //Illuminations Compat
    modImplementation "curse.maven:illuminations-292908:4046680"

    //Trinkets
    modImplementation "dev.emi:trinkets:${trinkets_version}"

    //Bewitchment
    modImplementation("curse.maven:bewitchment-394915:${project.bewitchment_version}")
    modImplementation("com.github.virtuoel:pehkui:${project.pehkui_version}")
    modImplementation("vazkii.patchouli:Patchouli:${project.patchouli_version}")
    modImplementation("maven.modrinth:midnightlib:${midnightlib_version}")
    modImplementation("com.github.emilyploszaj:step-height-entity-attribute:${step_height_version}")
    modImplementation("io.github.ladysnake:PlayerAbilityLib:${pal_version}")
    include("io.github.ladysnake:PlayerAbilityLib:${pal_version}")
    modImplementation "me.lucko:fabric-permissions-api:${fabric_permissions_api_version}"
    include "me.lucko:fabric-permissions-api:${fabric_permissions_api_version}"
    modImplementation("io.github.ladysnake:impersonate:${impersonate_version}") {
        transitive = false
    }
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

assemble.dependsOn runDatagen

java {
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}" }
    }
}
